<resources>
    <string name="app_name">NavegacaoTelas</string>

    <!-- Buttons -->
    <string name="btnAdd">Adicionar</string>
    <string name="btnEdit">Editar</string>
    <string name="btnConfirm">Confirmar</string>
    <string name="btnCancel">Cancelar</string>

    <!-- Text Views -->
    <string name="textView_id">Id:</string>
    <string name="textView_title">Titulo:</string>
    <string name="textView_author">Autor:</string>
    <string name="textView_value">Valor:</string>
    <string name="menu_add">Adicionar</string>
    <string name="menu_edit">Editar</string>
    <string name="menu_remove">Apagar</string>
    <string name="menu_settings">Configurações</string>
    <string name="menu_about">Sobre</string>
    <string name="textView_listbook">Lista de livros</string>
    <string name="placeholder_id">Digite id livro para editar ou excluir</string>
    <string name="titleHeader">Title</string>
    <string name="textView_infobook">Informações do livro</string>
    <string name="icon_book">Icone de livro</string>



</resources>